--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,19 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  {% include head.html %}
+  <head>{% include head.html %}</head>
 
   <body>
 
-    {% include header.html %}
+    {% include nav.html %}
 
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
-    </div>
-
-    {% include footer.html %}
+    {{ content }}
 
   </body>
 
