--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,22 +1,30 @@
-<header class="site-header">
+<div class="container">
 
-  <div class="wrapper">
+  <div class="header-left">
+    <img src="/icon.png"/>
+  </div>
 
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+  <div class="header-center">
 
-    <nav class="site-nav">
-      <a href="#" class="menu-icon">
-      </a>
+    <div class="header-center-top">
+      <a href="{{ site.baseurl }}/"><h1>{{ site.title }}</h1></a>
+    </div>
 
-      <div class="trigger">
-        {% for my_page in site.pages %}
-          {% if my_page.title %}
-          <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
-          {% endif %}
-        {% endfor %}
-      </div>
-    </nav>
+    <div class="header-center-bottom">
+      <nav>
+        <ul>
+          <li><a class="" href="/#about">about</a></li>
+          <li><a class="" href="/#writing">writing</a></li>
+          <li><a class="" href="/#resume">resume</a></li>
+        </ul>
+      </nav>
+    </div>
 
   </div>
 
-</header>
+  <div class="header-right">
+    <i class="fa fa-twitter"></i>
+    <i class="fa fa-github"></i>
+  </div>
+
+</div>
