--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,13 +1,15 @@
 ---
 layout: default
 ---
-<div class="container">
+<header class="nav-header">{% include nav.html %}</header>
+
+<main class="container">
   <div class="row">
 
     <article class="post">
 
       <header class="post-header">
-        <h1 class="post-title">{{ page.title }}</h1>
+        <h1 class="post-title"><a href="{{ page.url }}">{{ page.title }}</a></h1>
       </header>
 
       <div class="post-content">
@@ -17,4 +19,4 @@ layout: default
     </article>
 
   </div>
-</div>
+</main>
