--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -13,9 +13,10 @@
     <div class="header-center-bottom">
       <nav>
         <ul>
-          <li><a class="" href="/#about">about</a></li>
-          <li><a class="" href="/#writing">writing</a></li>
-          <li><a class="" href="/#resume">resume</a></li>
+          <li><a href="/#">home</a></li>
+          <li><a href="/#about">about</a></li>
+          <li><a href="/#writing">writing</a></li>
+          <li><a href="/#resume">resume</a></li>
         </ul>
       </nav>
     </div>
@@ -23,8 +24,16 @@
   </div>
 
   <div class="header-right">
-    <i class="fa fa-twitter"></i>
-    <i class="fa fa-github"></i>
+    <div>
+      <a href="http://twitter.com/lynncyrin"><i class="fa fa-twitter"></i></a>
+      <a href="http://github.com/lynnco"><i class="fa fa-github"></i></a>
+      <a href="http://gitlab.com/cyrin"><i class="fa fa-gitlab"></i></a>
+    </div>
+    <div>
+      <a href="http://steamcommunity.com/id/naxili"><i class="fa fa-steam-square"></i></a>
+      <a href="http://github.com/LynnCo/lynnco.github.io"><i class="fa fa-code"></i></a>
+      <a href="https://cash.me/$cyrin"><i class="fa fa-dollar"></i></a>
+    </div>
   </div>
 
 </div>
