--- a/_sass/_article.sass
+++ b/_sass/_article.sass
@@ -1,4 +1,6 @@
 .index-articles
+    margin: 0
+    padding: 0 5px
     list-style: none
 
     .index-navigation
@@ -23,9 +25,13 @@
 
     .index-header
 
-        h2
+        h2, h3
             display: inline-block
             opacity: 0.25
+
+        h3
+            font-size: 1.2em
+            margin: 0
 
         &:hover, &:active
             text-decoration: none
