--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,7 +6,7 @@ layout: default
 <main class="container">
   <div class="row">
 
-    <article class="post">
+    <article class="article">
 
       <header class="post-header">
         <h1 class="post-title"><a href="{{ page.url }}">{{ page.title }}</a></h1>
