add navigation to pages

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -16,6 +16,11 @@ layout: default
         {{ content }}
       </div>
 
+      <hr>
+      <div class="article-navigation">
+        <a href="#" class="article-header"><h3>back to top</h3></a>
+      </div>
+
     </article>
 
   </div>
