--- a/_sass/_article.sass
+++ b/_sass/_article.sass
@@ -3,10 +3,6 @@
     padding: 0 5px
     list-style: none
 
-    .index-navigation
-        position: relative
-        text-align: center
-
     .nav-icon
         color: black
         opacity: 0.25
@@ -22,23 +18,6 @@
 
     .nav-icon-down
         right: 0
-
-    .index-header
-
-        h2
-            margin: 0
-
-        h2, h3
-            display: inline-block
-            opacity: 0.25
-
-        h3
-            font-size: 1.2em
-            margin: 0
-
-        &:hover, &:active
-            text-decoration: none
-            color: purple
 
 .index-articles>*
     margin-top: 30vh
@@ -82,6 +61,27 @@ article, .index-articles>*
     h5
         font-size: 1.5em
 
+    .article-navigation
+        position: relative
+        text-align: center
+
+    .article-header
+
+        h2
+            margin: 0
+
+        h2, h3
+            display: inline-block
+            opacity: 0.25
+
+        h3
+            font-size: 1.2em
+            margin: 0
+
+        &:hover, &:active
+            text-decoration: none
+            color: purple
+
     .post-meta
         opacity: 0.8
 
@@ -108,7 +108,7 @@ article, .index-articles>*
         margin: 0 0 10px
 
 article.article
-    margin-top: 60px
+    margin: 60px 0
 
 #writing
     h3
