--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -25,13 +25,13 @@
 
   <div class="header-right">
     <div>
-      <a href="http://twitter.com/lynncyrin"><i class="fa fa-twitter"></i></a>
-      <a href="http://github.com/lynnco"><i class="fa fa-github"></i></a>
-      <a href="http://gitlab.com/cyrin"><i class="fa fa-gitlab"></i></a>
+      <a href="https://twitter.com/lynncyrin"><i class="fa fa-twitter"></i></a>
+      <a href="https://github.com/lynnco"><i class="fa fa-github"></i></a>
+      <a href="https://gitlab.com/cyrin"><i class="fa fa-gitlab"></i></a>
     </div>
     <div>
-      <a href="http://steamcommunity.com/id/naxili"><i class="fa fa-steam-square"></i></a>
-      <a href="http://github.com/LynnCo/lynnco.github.io"><i class="fa fa-code"></i></a>
+      <a href="https://steamcommunity.com/id/naxili"><i class="fa fa-steam-square"></i></a>
+      <a href="https://github.com/LynnCo/lynnco.github.io"><i class="fa fa-code"></i></a>
       <a href="https://cash.me/$cyrin"><i class="fa fa-dollar"></i></a>
     </div>
   </div>
