--- a/_sass/_header.sass
+++ b/_sass/_header.sass
@@ -2,6 +2,7 @@ header.nav-header
     display: flex
     flex-direction: column
     justify-content: center
+    padding: 0 5px
 
     a, a:visited
         color: black
