--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -28,6 +28,7 @@
       <a href="https://twitter.com/lynncyrin"><i class="fa fa-twitter"></i></a>
       <a href="https://github.com/lynnco"><i class="fa fa-github"></i></a>
       <a href="https://gitlab.com/cyrin"><i class="fa fa-gitlab"></i></a>
+      <a href="https://paypal.me/cyrin"><i class="fa fa-paypal"></i></a>
     </div>
     <div>
       <a href="https://steamcommunity.com/id/naxili"><i class="fa fa-steam-square"></i></a>
