--- a/_sass/_body.sass
+++ b/_sass/_body.sass
@@ -18,6 +18,9 @@ h1, h2, h3, h4, h5
     font-size: 24px
     margin: 5px
 
+.centered
+    text-align: center
+
 @media (max-width: 768px)
 
     body
