--- a/_sass/_body.sass
+++ b/_sass/_body.sass
@@ -21,7 +21,15 @@ h1, h2, h3, h4, h5
 .centered
     text-align: center
 
+.compressed
+    padding-left: 15%
+    padding-right: 15%
+
 @media (max-width: 768px)
 
     body
         font-size: 1.1em
+
+    .compressed
+        padding-left: 0
+        padding-right: 0
