--- a/_sass/_article.sass
+++ b/_sass/_article.sass
@@ -24,7 +24,7 @@
     margin-bottom: 30vh
 
 article, .index-articles>*
-    padding: 30px 30px
+    padding: 30px 10%
     background-color: rgba(255,255,255,0.8)
     border-radius: 40px
     line-height: 1.5em
@@ -41,7 +41,7 @@ article, .index-articles>*
     h1
         text-align: center
         margin-top: 0
-        margin-bottom: 20px
+        margin-bottom: 30px
         padding-bottom: 10px
         border-bottom: 2px rgba(100,100,100,0.3) solid
         a
@@ -60,6 +60,12 @@ article, .index-articles>*
 
     h5
         font-size: 1.5em
+
+    ol
+        list-style: none
+
+    ul
+        margin-bottom: 30px
 
     .article-navigation
         position: relative
@@ -98,14 +104,14 @@ article, .index-articles>*
 
     h2, h3, h4, h5
         text-align: center
-        margin: 25px 0
+        margin: 40px 0
 
     p
-        line-height: 1.7em
-        margin: 0 0 20px
+        line-height: 2em
+        margin: 0 0 30px
 
     li
-        margin: 0 0 10px
+        margin: 0 0 20px
 
 article.article
     margin: 60px 0
