--- a/_sass/_article.sass
+++ b/_sass/_article.sass
@@ -64,6 +64,9 @@ article, .index-articles>*
     ul
         margin-bottom: 30px
 
+    ol li > *
+        display: inline
+
     .article-navigation
         position: relative
         text-align: center
