links less huge

--- a/_sass/_article.sass
+++ b/_sass/_article.sass
@@ -67,6 +67,10 @@ article, .index-articles>*
     ol li > *
         display: inline
 
+    .autolink i
+        font-size: 1em
+        margin: 0
+
     .article-navigation
         position: relative
         text-align: center
