--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -34,6 +34,7 @@
       <a href="https://steamcommunity.com/id/naxili"><i class="fa fa-steam-square"></i></a>
       <a href="https://github.com/LynnCo/lynnco.github.io"><i class="fa fa-code"></i></a>
       <a href="https://cash.me/$cyrin"><i class="fa fa-dollar"></i></a>
+      <a href="mailto:lynncyrin@gmail.com" title="lynncyrin@gmail.com"><i class="fa fa-envelope"></i></a>
     </div>
   </div>
 
