--- a/_sass/_article.sass
+++ b/_sass/_article.sass
@@ -47,19 +47,18 @@ article, .index-articles>*
         a
             color: black
 
-
     h2
-        text-align: center
+        font-size: 2em
         margin: 0
 
     h3
-        font-size: 2em
+        font-size: 1.8em
 
     h4
-        font-size: 1.75em
+        font-size: 1.6em
 
     h5
-        font-size: 1.5em
+        font-size: 1.4em
 
     ul
         margin-bottom: 30px
@@ -107,7 +106,7 @@ article, .index-articles>*
 
 
     h2, h3, h4, h5
-        text-align: center
+        text-align: left
         margin: 40px 0
 
     p
