--- a/_sass/_article.sass
+++ b/_sass/_article.sass
@@ -115,9 +115,20 @@ article, .index-articles>*
 
     li
         margin: 0 0 20px
+        word-wrap: break-word
+
 
 article.article
-    margin: 60px 0
+    margin: 60px 10px
+
+    @media (min-width: 768px)
+        margin: 60px 5%
+
+    @media (min-width: 992px)
+        margin: 60px 10%
+
+    @media (min-width: 1200px)
+        margin: 60px 15%
 
 #writing
     h3
