code block formatting

--- a/_sass/_article.sass
+++ b/_sass/_article.sass
@@ -66,6 +66,9 @@ article, .index-articles>*
     ol li > *
         display: inline
 
+    pre
+        margin: 0 -10% 20px
+
     .autolink i
         font-size: 1em
         margin: 0
