--- a/_sass/_article.sass
+++ b/_sass/_article.sass
@@ -143,6 +143,7 @@ $color-rank-3: #9EB25D
 $color-rank-4: #A7C6DA
 
 .star-ranking
+// TODO: document what the html for this looks like
 
   width: 35px
 
