--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -26,7 +26,7 @@
   <div class="header-right">
     <div>
       <a href="https://twitter.com/lynncyrin"><i class="fa fa-twitter"></i></a>
-      <a href="https://github.com/lynnco"><i class="fa fa-github"></i></a>
+      <a href="https://github.com/lynncyrin"><i class="fa fa-github"></i></a>
       <a href="https://gitlab.com/cyrin"><i class="fa fa-gitlab"></i></a>
       <a href="https://paypal.me/cyrin"><i class="fa fa-paypal"></i></a>
     </div>
